tests/invalid/function/local_let_rec_uncaptured_outer.facet
fn main() -> unrestricted isize {
  let y: unrestricted isize = 1 in
  let rec f(x: unrestricted isize) -> unrestricted isize {
    y
  }
  in (f 1)
}
